# reaktplot

./: .env  .gitignore  CMakeLists.txt  LICENSE  README.md  environment.devenv.yml  environment.yml
cmake/: reaktplotConfig.cmake.in  reaktplotInstallConfigFiles.cmake
docs/: mkdocs.yml
docs/api/: doxyfile
docs/api/src/: mainpage.md
docs/api/template/: header.html
docs/others/: list-of-layout-methods-from-plotly-website.txt  list-of-xyaxis-methods-from-plotly-website.txt
docs/website/: faq.md  index.md  installation.md  known_issues.md  tutorials.md
examples/: CMakeLists.txt  example-sine-functions.cpp
examples/cmake-project/: README.md  main.cpp
examples/cpp/: CMakeLists.txt  example-contour-animation.cpp  example-contour-plot-missing-data.cpp  example-contour-plot.cpp  example-readme.cpp  example-sine-functions.cpp
examples/cpp/cmake-project/: CMakeLists.txt
python/: CMakeLists.txt  pyproject.toml  setup.py.in
python/package/: CMakeLists.txt  README.md  setup.py.in
python/package/reaktplot/: __init__.py
python/src/reaktplot/: DefaultTheme.py  Figure.py  Specs.py  __init__.py
reaktplot/: Array.hpp  Array.py  Array.py.cxx  CMakeLists.txt  Constants.hpp  Constants.py  Constants.py.cxx  Default.hpp  Default.py  Default.py.cxx  Enums.hpp  Enums.py  Enums.py.cxx  Enums.test.cxx  Figure.cpp  Figure.hpp  Figure.py  Figure.py.cxx  Figure.test.cxx  Macros.hpp  Macros.py  Macros.py.cxx  Macros.test.cxx  Plotly.cpp  Plotly.hpp  Plotly.py  Plotly.py.cxx  Pythonic.cpp  Pythonic.hpp  Scatter.cpp  Scatter.hpp  Scatter.py  Scatter.py.cxx  Specs.hpp  Utils.hpp  Utils.py  Utils.py.cxx  Utils.test.cxx  main.cpp  pybind11.hxx  (+2 more)
scripts/: generate_palettes_hpp.py
tests/: CMakeLists.txt  ColumnIndex.test.cxx  Utils.test.cxx  pytest.ini.in
tests/cpp/: Array.test.cxx  CMakeLists.txt  Constants.test.cxx  Default.test.cxx  Figure.test.cxx  Plotly.test.cxx  Scatter.test.cxx  Specs.test.cxx  reaktplot.test.cxx
tests/cpp/testing-project/: README.md  main.cpp  util.cpp
tests/python/: CMakeLists.txt  Figure.py  pytest.ini.in
tests/testing-project/: CMakeLists.txt  main.cpp  util.cpp
