[build-system]
requires = ["setuptools>=61.0", "plotly>=5.10", "kaleido>=0.2"]
build-backend = "setuptools.build_meta"

[project]
name = "reaktplot"
version = "0.3.0"
authors = [
  { name="Allan Leal", email="allan.leal@erdw.ethz.ch" },
]
description = "reaktplot is an easy-to-use C++ and Python plotting library powered by plotly"
readme = "../README.md"
license = { file="../LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/reaktoro/reaktplot"
"Bug Tracker" = "https://github.com/reaktoro/reaktplot/issues"
